<resources>
    <string name="app_name">FitCiti</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MainFragment -->
    <string name="schedules">Workout Schedules</string>
    <string name="nutrition">Nutrition Schedules</string>
    <string name="supplement">About Supplement</string>

    <!-- Fragment Account -->
    <string name="faEdtName">Name</string>
    <string name="faEdtSurname">Surname</string>
    <string name="faEdtUserNick">Nickname</string>
    <string name="faEdtEmail">Email</string>
    <string name="faBtnNext">Next</string>
    <string name="faTxtAccountInfo">Account Info</string>
    
    <!-- Fragment Person Info -->
    <string name="fpiTxtPersonInfo">Person Info</string>
    <string name="fpiEdtWeight">Weight</string>
    <string name="fpiEdtHeight">Height</string>
    <string name="fpiEdtAge">Age</string>
    <string name="fpiBirtDate">Birth Date</string>
    <string name="fpiGoal">Goal</string>
    <string name="fpiActivityFrequency">Activity Frequency</string>
    <string-array name="fpiArrGoal">
        <item>Loose</item>
        <item>Muscle</item>
        <item>Fit</item>
        <item>Gain Weight</item>
        <item>Bulk</item>
    </string-array>

    <string-array name="fpiArrActivityFrequency">
        <item>Very Light Physical Activity</item>
        <item>Light Activity</item>
        <item>Medium Activity</item>
        <item>Heavy Activity</item>
    </string-array>


    <!-- Fragment Location Info -->
    <string name="fliTxtLocationInfo">Location Info</string>
    <string name="fliCountry">Country</string>
    <string name="fliProvince">Province</string>
    <string name="fliTown">Town</string>
    <string name="fliBtnNext">Lets Go</string>
    <string-array name="fliCountry">
        <item>Turkey</item>
    </string-array>

    <string-array name="fliTurkeyProvince">
        <item>Adana</item>
        <item>Adıyaman</item>
        <item>Afyon</item>
        <item>Ağrı</item>
        <item>Amasya</item>
        <item>Ankara</item>
        <item>Antalya</item>
        <item>Artvin</item>
        <item>Aydın</item>
        <item>Balıkesir</item>
        <item>Bilecik</item>
        <item>Bingöl</item>
        <item>Bitlis</item>
        <item>Bolu</item>
        <item>Burdur</item>
        <item>Bursa</item>
        <item>Çanakkale</item>
        <item>Çankırı</item>
        <item>Çorum</item>
        <item>Denizli</item>
        <item>Diyarbakır</item>
        <item>Edirne</item>
        <item>Elazığ</item>
        <item>Erzincan</item>
        <item>Erzurum</item>
        <item>Eskişehir</item>
        <item>Gaziantep</item>
        <item>Giresun</item>
        <item>Gümüşhane</item>
        <item>Hakkari</item>
        <item>Hatay</item>
        <item>Isparta</item>
        <item>İçel</item>
        <item>İstanbul</item>
        <item>İzmir</item>
        <item>Kars</item>
        <item>Kastamonu</item>
        <item>Kayseri</item>
        <item>Kırklareli</item>
        <item>Kırşehir</item>
        <item>Kocaeli</item>
        <item>Konya</item>
        <item>Kütahya</item>
        <item>Malatya</item>
        <item>Manisa</item>
        <item>Kahramanmaraş</item>
        <item>Mardin</item>
        <item>Muğla</item>
        <item>Muş</item>
        <item>Nevşehir</item>
        <item>Niğde</item>
        <item>Ordu</item>
        <item>Rize</item>
        <item>Sakarya</item>
        <item>Samsun</item>
        <item>Siirt</item>
        <item>Sinop</item>
        <item>Sivas</item>
        <item>Tekirdağ</item>
        <item>Tokat</item>
        <item>Trabzon</item>
        <item>Tunceli</item>
        <item>Şanlıurfa</item>
        <item>Uşak</item>
        <item>Van</item>
        <item>Yozgat</item>
        <item>Zonguldak</item>
        <item>Aksaray</item>
        <item>Bayburt</item>
        <item>Karaman</item>
        <item>Kırıkkale</item>
        <item>Batman</item>
        <item>Şırnak</item>
        <item>Bartın</item>
        <item>Ardahan</item>
        <item>Iğdır</item>
        <item>Yalova</item>
        <item>Karabük</item>
        <item>Kilis</item>
        <item>Osmaniye</item>
        <item>Düzce</item>
    </string-array>



</resources>
