<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.boshware.fitciti.SignUp.AccountInfoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
            style="@style/styleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/faTxtAccountInfo"
            android:textSize="20sp"/>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">



                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/ic_action_name"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp"/>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:enabled="false"
                android:id="@+id/faiName"
                style="@style/styleMaterialEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/faEdtName"
                app:met_baseColor="@color/colorEdtText"
                app:met_errorColor="@color/colorError"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorEdtText"
                app:met_singleLineEllipsis="true"/>

              <com.rengwuxian.materialedittext.MaterialEditText
                android:enabled="false"
                android:id="@+id/faiSurname"
                style="@style/styleMaterialEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/faEdtSurname"
                app:met_baseColor="@color/colorEdtText"
                app:met_errorColor="@color/colorError"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorEdtText"
                app:met_singleLineEllipsis="true"/>



            <com.rengwuxian.materialedittext.MaterialEditText
                android:enabled="false"
                android:id="@+id/faiEmail"
                style="@style/styleMaterialEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/faEdtEmail"
                app:met_baseColor="@color/colorEdtText"
                app:met_errorColor="@color/colorError"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorEdtText"
                app:met_singleLineEllipsis="true"/>



            <!--

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/faiNickname"
                style="@style/styleMaterialEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/faEdtUserNick"
                app:met_baseColor="@color/colorEdtText"
                app:met_errorColor="@color/colorError"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="30"
                app:met_primaryColor="@color/colorAccent"
                app:met_singleLineEllipsis="true"/>
            -->
        </LinearLayout>

        <com.rey.material.widget.Button
            android:id="@+id/fai_btnNext"
            style="@style/styleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="15dp"
            android:text="@string/faBtnNext"
            app:rd_rippleType="wave"
            app:rd_style="@style/Material.Drawable.Ripple.Wave.Light"/>

    </RelativeLayout>

</FrameLayout>
